fix: weather icon position on mobile

--- a/src/Component.css
+++ b/src/Component.css
@@ -122,6 +122,14 @@
   filter: drop-shadow(0 7px 24px #f7e66888);
 }
 
+@media (max-width: 700px) {
+  .weather-icon {
+    height: 210px;
+    width: 240px;
+    top: -150px;
+  }
+}
+
 .search-history-title {
   margin-top: 35px;
   font-size: 20px;
